Добавлена функция удаления абонемента
